common-applications/test-environment/om-webserver-provider/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/limit-connections: "20"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: om-webserver-ingress
  namespace: om-webserver-provider
spec:
  tls:
    - hosts:
        - providerapi.test.osinfra.cn
      secretName: tls-secrets
  rules:
    - host: providerapi.test.osinfra.cn
      http:
        paths:
          - backend:
              serviceName: om-webserver-service
              servicePort: 80
            path: /
